--- a/client/index.html
+++ b/client/index.html
@@ -20,14 +20,19 @@
                 <li class="flex justify-center items-center"><a href="#" target="_blank"></a><i id="icon" class="fa-solid fa-gear fa-2x" style="color: #ea7c69;"></i></li>
             </ul>
         </div>
-        <div class="main-fox w-3/5">
+        <div class="main-fox w-3/5 ml-16">
             <div class="main-fox_search flex justify-around items-center h-[80px]">
                 <div>
                     <h1>Jaegar Resto</h1>
                     <h3>Tuesday, 2 Feb 2021</h3>
                 </div>
                 <div>
-                    <input class="p-2" type="search" name="search" id="search" placeholder="Search for food, coffe, etc..">
+                    <div class="relative mt-2 rounded-md shadow-sm w-4/5">
+                  <input type="text" name="price" autocomplete="off" id="price" class="w-full py-2 rounded-md border-0 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-indigo-600" >
+                  <div class="absolute inset-y-0 right-0 flex items-center">
+                    <i id="currency" name="currency" class="fa-solid fa-magnifying-glass fa-lg rounded-md border-0 bg-transparent py-0 pl-2 pr-7 text-gray-500"></i>
+                  </div>
+                </div>
                 </div>
             </div>
             <div class="content-tab flex gap-12 ml-8 pt-6">
@@ -39,6 +44,9 @@
         </div>
         <div class="main-korzina w-2/5">
             
+            <div>
+
+            </div>
         </div>  
     </div>
 
